# cmake_concept

./: README.md
deeper_export_library/install/lib/: libMyLibrary.dylib  libpeaks.dylib
deeper_export_library/install/lib/cmake/MyLibrary/: MyLibraryTargets.cmake
deeper_export_library/install/lib/cmake/peaks/: peaksTargets.cmake
deeper_export_library/projectA/source/: CMakeLists.txt
deeper_export_library/projectB/source/: CMakeLists.txt
deeper_export_library/projectB/source/psana/: CMakeLists.txt
deeper_export_library/projectB/source/psana/include/: code.hh
deeper_export_library/projectB/source/psana/src/: code.cc
export_library/install/: MyLibraryConfig.cmake  MyLibraryTargets-noconfig.cmake
export_library/install/include/: MyLibrary.hpp
export_library/projectA/source/: CMakeLists.txt
export_library/projectA/source/cmake/: MyLibraryConfig.cmake.in
export_library/projectB/source/: CMakeLists.txt  main.cpp
fold/projectA/source/: CMakeLists.txt
folder_exec/: CMakeLists2.txt
folder_exec/projectA/cmake/: ProjectAConfig.cmake.in
folder_exec/projectA/source/: CMakeLists.txt  bye.cpp
folder_exec/projectB/source/: CMakeLists.txt  greeting.cpp  hello.cpp
folder_header/projectA/source/: CMakeLists.txt  MyClass.cpp  MyClass.h  main.cpp
pip/projectA/source/: CMakeLists.txt
